comment heading and correct spacing between edit and delete comment buttons complete.

--- a/public/style.css
+++ b/public/style.css
@@ -29,8 +29,6 @@ header {
 
 }
 
-/* .deleteComment {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-} */
+.italics {
+  font-style: italic;
+}
